@@ -1,0 +1,7 @@
+use strict;
+use warnings;
+
+use SPVM::Builder::Config;
+my $bconf = SPVM::Builder::Config->new_default;
+
+$bconf;
